# model-experiments

./: .github-COMPLETION_REPORT.md  .gitignore  CLI_IMPLEMENTATION.md  CLI_REFERENCE.md  IMPLEMENTATION_STATUS.md  LEARNINGS.md  README.md  REPOSITORY_STRUCTURE.md  SCRIPTS_README.md  SUMMARY.md  USAGE.md  bootstrap.sh  demo_usage.sh  main.py  pyproject.toml  quick_demo.sh  requirements.txt  test_cli.sh
.cursor/rules/: uv-python-management.mdc
.localonly/: task.md
docs/: CACHING.md  CLI_IMPLEMENTATION.md  CLI_REFERENCE.md  COMPARE_IMPLEMENTATION.md  DATASET_DOWNLOAD_IMPLEMENTATION.md  DEMO_FIXES_SUMMARY.md  DEMO_ISSUES_FIXED.md  IMPLEMENTATION_STATUS.md  PYTORCH_INSTALLATION.md  README.md  SCRIPTS_README.md  SUMMARY.md
experiments/exp_20251107_112805_imdb_distilbert-base-uncased/: experiment_metadata.json
experiments/exp_20251107_112805_imdb_distilbert-base-uncased/comparison/: report.html
experiments/exp_20251107_112805_imdb_distilbert-base-uncased/metrics/: base_model_metrics.json  fine_tuned_metrics.json
experiments/exp_20251107_112805_imdb_distilbert-base-uncased/predictions/: base_predictions.jsonl  fine_tuned_predictions.jsonl
experiments/exp_20251107_141338_imdb_distilbert-base-uncased/: experiment_metadata.json
experiments/exp_20251107_141338_imdb_distilbert-base-uncased/comparison/: report.html
experiments/exp_20251107_141338_imdb_distilbert-base-uncased/metrics/: base_model_metrics.json  fine_tuned_metrics.json
experiments/exp_20251107_141338_imdb_distilbert-base-uncased/predictions/: base_predictions.jsonl  fine_tuned_predictions.jsonl
experiments/exp_20251107_141415_imdb_distilbert-base-uncased/: experiment_metadata.json
experiments/exp_20251107_141415_imdb_distilbert-base-uncased/comparison/: report.html
experiments/exp_20251107_141415_imdb_distilbert-base-uncased/metrics/: base_model_metrics.json  fine_tuned_metrics.json
experiments/exp_20251107_141415_imdb_distilbert-base-uncased/predictions/: base_predictions.jsonl  fine_tuned_predictions.jsonl
scripts/: bootstrap.sh  quick_demo.sh
src/model_experiments/: __init__.py  cli.py
src/model_experiments/commands/: __init__.py  compare.py  dataset.py  evaluate.py  experiment.py  model.py  train.py
tests/: README.md  run_all_tests.sh  test_caching.sh  test_compare.sh  test_dataset_download.sh  test_evaluate.sh  test_model_download.sh  test_run_experiment.sh  test_train.sh  test_train_caching.sh
