[project]
name = "model-experiments"
version = "0.1.0"
description = "A framework for iterative model training and evaluation with comprehensive monitoring"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "shellingham>=1.5.0",
    "datasets>=2.14.0",
    "transformers>=4.30.0",
    "huggingface_hub>=0.16.0",
]

[project.scripts]
model-experiments = "model_experiments.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
torch-cpu = [
    "torch>=2.0.0",
]
# To use GPU with CUDA 12.1, install with: uv sync --extra torch-gpu and then manually install torch[cu121]
torch-gpu = [
    "torch>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src/model_experiments --cov-report=term-missing"
